CORE-40450: Fixing overlapping text in AR in delivery block in mobile.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-booking/component/_online-booking-delivery.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/online-booking/component/_online-booking-delivery.scss
@@ -18,6 +18,10 @@
       display: inline-block;
     }
 
+    &-slot {
+      display: inline;
+    }
+
     @include breakpoint($only-mobile) {
       display: flex;
       flex-direction: column;
